--- a/config.json
+++ b/config.json
@@ -24,9 +24,9 @@
     "ignoreCommand": []
   },
   "adminBot": [
-    "100014754734049",
-    "100075122837809",
-    "100085332887575"
+    "61574244623043",
+    "",
+    ""
   ],
   "whiteListMode": {
     "enable": false,
@@ -35,8 +35,8 @@
     ],
     "notes": "if you enable this feature, only the ids in the whiteListIds section can use the bot"
   },
-  "nickNameBot": "「 𝐌𝐀𝐇𝐀𝐁𝐔𝐁-𝐁𝐎𝐓 」🩷🪽",
-  "prefix": "/",
+  "nickNameBot": "Gok Gok-𝐁𝐎𝐓",
+  "prefix": "!",
   "database": {
     "type": "sqlite",
     "uriMongodb": "",
